<resources>
    <string name="app_name">Scheduler</string>
    <string name="app_heading">Set Schedule</string>
    <string name="pick_time_button">Pick Time</string>
    <string name="save_schedule_button">Save Schedule</string>
    <string name="choose_days">Choose Days:</string>
    <string name="view_scheduled_apps">View Scheduled Apps</string>
    <string name="scheduled_app_name">App Name</string>
    <string name="schedule_information">Schedule information</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_time_selected">No time selected</string>
    <string name="select_days">Select Days:</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="launch_time">Launch Time</string>
    <string name="app_icon">App Icon</string>
    <string name="schedule_on">Schedule on :</string>
    <string name="delete_all">Delete All</string>
    <string name="scheduled_apps_header">Scheduled Apps</string>
</resources>