<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8E1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/appName"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/pickTimeButton"
        android:text="@string/pick_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_grey_button"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/timeSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No time selected"
        android:layout_marginTop="8dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dayPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dayText"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/choose_days"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="@id/dayPicker"
            app:layout_constraintLeft_toLeftOf="parent" />


        <Spinner
            android:id="@+id/recurrenceSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/dayText"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="24dp"/>

        <LinearLayout
            android:id="@+id/weeklyDaysGroup"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/recurrenceSpinner"
            app:layout_constraintStart_toStartOf="@id/dayText"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="Select Days:"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/monCheck"
                android:text="Monday"/>
            <CheckBox
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/tueCheck"
                android:text="Tuesday"/>
            <CheckBox
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/wedCheck"
                android:text="Wednesday"/>
            <CheckBox
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/thuCheck"
                android:text="Thursday"/>
            <CheckBox
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/friCheck"
                android:text="Friday"/>
            <CheckBox
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/satCheck"
                android:text="Saturday"/>
            <CheckBox
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/sunCheck"
                android:text="Sunday"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/saveButton"
        android:text="@string/save_schedule_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_grey_button"
        android:layout_marginTop="32dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:elevation="6dp"
        app:cardCornerRadius="12dp"
        android:visibility="gone"
        android:id="@+id/schedulesCardView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/schedulesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:scrollbars="vertical" />

    </androidx.cardview.widget.CardView>
</LinearLayout>
